[package]
name = "theme"
version = "0.1.0"
edition = "2024"

[dependencies]
kmeans_colors = "0.7.1"
image = "0.25.10"
palette = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6.0", features = ["derive"] }
tabled = { version = "0.20.0", features = ["ansi"] }
